fixed the hover to not change spacing

--- a/parcel-frontend/stylesheet.css
+++ b/parcel-frontend/stylesheet.css
@@ -1,3 +1,7 @@
+*{
+    padding: 0;
+    margin: 0;
+}
 body{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-image: url("images/HomePhoto.jpg");
@@ -43,7 +47,12 @@ nav ul{
     list-style: none;
 }
 
-.button:hover{
+.navbutton{
+    padding: 1em;
+    align-content: center;
+}
+
+.navbutton:hover{
     background-color: rgb(167, 187, 207);
     color: black;
 }
